--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,42 @@
 version: '3.8'
 
 services:
-#  jenkins_app:
-#    image: jenkins/jenkins:lts-jdk21
-#    container_name: jenkins_app
-#    ports:
-#      - "8081:8080" # для доступа к веб-интерфейсу Jenkins
-#      - "50000:50000" # для подключения агентов
-#    volumes:
-#      - jenkins_home:/var/jenkins_home
-#    networks:
-#      - persistence_ntwrk
-  mybatis_vs_hibernate:
+  jenkins_app:
+    image: jenkins/jenkins:lts-jdk21
+    container_name: jenkins_app
+    ports:
+      - "8081:8080" # для доступа к веб-интерфейсу Jenkins
+      - "50000:50000" # для подключения агентов
+    volumes:
+      - jenkins_home:/var/jenkins_home
+    networks:
+      - jenkins_ntwrk
+  persistence:
     build: .
-    container_name: mybatis_vs_hibernate
+    container_name: persistence
     ports:
       - "8082:8080"
+    networks:
+      - persistence_ntwrk
+  postgres:
+    container_name: postgres
+    image: postgres
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+    ports:
+      - "5432:5432"
+    networks:
+      - persistence_ntwrk
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
     networks:
       - persistence_ntwrk
 
@@ -24,3 +45,5 @@ volumes:
 networks:
   persistence_ntwrk:
     name: persistence_ntwrk
+  jenkins_ntwrk:
+    name: jenkins_ntwrk
