--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,8 @@ spring:
     enabled: true
     change-log: db/changelog/changelog.yml
     default-schema: ${db.schema}
+mybatis:
+  type-handlers-package: com.pdp.persistence.dao.mybatis.handler
 db:
   schema: persistence_app
 logging:
