--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: persistence
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres #${DATABASE_URL}
-    username: admin #${DATABASE_USERNAME}
-    password: admin #${DATABASE_PASSWORD}
+    url: ${DATABASE_URL}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: none
