--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,19 +11,25 @@ services:
       - jenkins_home:/var/jenkins_home
     networks:
       - jenkins_ntwrk
-  persistence:
+
+  persistence_app:
     build: .
-    container_name: persistence
+    container_name: persistence_app
+    env_file:
+      - 'variables.env'
     ports:
       - "8082:8080"
     networks:
       - persistence_ntwrk
-  postgres:
-    container_name: postgres
+  postgres_db:
+    container_name: postgres_db
     image: postgres
+    env_file:
+      - 'variables.env'
     environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin
+      POSTGRES_USER: ${DATABASE_USERNAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${DATABASE_NAME}
     ports:
       - "5432:5432"
     networks:
@@ -33,8 +39,8 @@ services:
     image: dpage/pgadmin4
     restart: always
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_USER}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
     ports:
       - "5050:80"
     networks:
