--- a/variables.env
+++ b/variables.env
@@ -1,3 +1,5 @@
 DATABASE_URL=jdbc:postgresql://postgres_db:5432/persistence
 DATABASE_USERNAME=admin
 DATABASE_PASSWORD=admin
+APP_LOG_LEVEL=debug
+DATABASE_SCHEMA=persistence_schema
