--- a/src/main/resources/kubernetes/helm/chart/dev/templates/ingress.yaml
+++ b/src/main/resources/kubernetes/helm/chart/dev/templates/ingress.yaml
@@ -1,27 +1,27 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-hosts
+  name: {{ .Release.Name }}-ingress
+  annotations:
+    spec.ingressClassName: nginx
+    nginx.ingress.kubernetes.io/rewrite-target: /
 
 spec:
   rules:
     - host: www.persistence.local
       http:
         paths:
-        - pathType: Prefix
-          path: /v1/persistence
-          backend:
-            service:
-              name: persistence-service-{{ .Release.Name }}
-              port:
-                number: {{ .Values.port.persistence }}
-    - host: www.pgadmin.local
-      http:
-        paths:
           - pathType: Prefix
-            path: /login
+            path: /
             backend:
               service:
-                name: pgadmin-service-{{ .Release.Name }}
+                name: persistence-service-{{ .Release.Name }}
                 port:
-                  number: {{ .Values.port.pgadmin }}
+                  number: {{ .Values.port.persistence }}
+#          - pathType: Prefix
+#            path: /login
+#            backend:
+#              service:
+#                name: pgadmin-service-{{ .Release.Name }}
+#                port:
+#                  number: {{ .Values.port.pgadmin }}
