--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -1,14 +1,15 @@
 version: '3.8'
 
 services:
-  jenkins_app:
-    image: jenkins/jenkins:lts-jdk21
-    container_name: jenkins_app
+  jenkins_server:
+    build: .
+    container_name: jenkins_server
     ports:
       - "8081:8080" # для доступа к веб-интерфейсу Jenkins
       - "50000:50000" # для подключения агентов
     volumes:
       - jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - jenkins_ntwrk
 
